[package]
name = "svg-path-cst"
version = "0.1.1"
edition = "2021"
readme = "README.md"
description = "CST SVG path parser."
license = "MIT"
documentation = "https://docs.rs/svg-path-cst"
repository = "https://github.com/mondeja/svg-path-cst"

[lib]
name = "svg_path_cst"
path = "src/lib.rs"

[dependencies]
snafu = { version = "0.8.0", default_features = false }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
doc-comment = "0.3.3"

[features]
tracing = ["dep:tracing"]
