[package]
name = "svg-path-cst"
version = "0.1.4"
edition = "2021"
readme = "README.md"
description = "CST SVG path parser."
license = "MIT"
documentation = "https://docs.rs/svg-path-cst"
repository = "https://github.com/mondeja/svg-path-cst"
author = "Álvaro Mondéjar Rubio"

[lib]
name = "svg_path_cst"
path = "src/lib.rs"

[[bin]]
name = "svg-path-cst"
path = "src/main.rs"

[features]
default = []
tracing = ["dep:tracing"]
strict = []

[dependencies]
snafu = { version = "0.8", default-features = false }
tracing = { version = "0.1", optional = true, default-features = false, features = [
  "attributes"
] }

[dev-dependencies]
doc-comment = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "no_features"
harness = false

[workspace]
members = [".", "examples/tracing"]
